@@ -15,6 +15,27 @@
 - ログインのクリックで平常点を表示。
 * a の alt 属性
 
+
+## 3.3.3-SNAPSHOT
+
+- added jvm-opts to `project.clj`
+
+```clojure
+:jvm-opts    ["--add-opens=java.base/java.nio=ALL-UNNAMED"
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+                "--enable-native-access=ALL-UNNAMED"
+                "--sun-misc-unsafe-memory-access=allow"]
+```
+
+still remains warning
+
+```
+dev=> (go)
+WARNING: abs already refers to: #'clojure.core/abs in namespace: medley.core, being replaced by: #'medley.core/abs
+:duct.server.http.jetty/starting-server {:port 3030}
+:initiated
+```
+
 ## 3.3.2 (2026-04-26)
 
 - changed - color of quote headline, navy to #da8596;
